{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 30,
  "lineage": "4cb46a1b-d962-7dfb-8bbd-6f56dc660dc8",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-05-17T03:31:57.703-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/valkoiset/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/valkoiset/global/networks/default",
            "priority": 1000,
            "project": "valkoiset",
            "self_link": "https://www.googleapis.com/compute/v1/projects/valkoiset/global/firewalls/allow-http",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "mynetwork"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-05-17T03:31:58.037-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/valkoiset/global/firewalls/allow-https",
            "log_config": [],
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/valkoiset/global/networks/default",
            "priority": 1000,
            "project": "valkoiset",
            "self_link": "https://www.googleapis.com/compute/v1/projects/valkoiset/global/firewalls/allow-https",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "mynetwork"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "allow-https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20220406",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/valkoiset/zones/europe-west1-b/disks/list-name1-name2-name3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "This is our Virtual Machine",
            "enable_display": false,
            "id": "projects/valkoiset/zones/europe-west1-b/instances/list-name1-name2-name3",
            "instance_id": "4324051988757006193",
            "label_fingerprint": "jfVcmEMJBv4=",
            "labels": {
              "machine_type": "n1-standard-4",
              "name": "list-1"
            },
            "machine_type": "n1-standard-4",
            "metadata": {
              "foo": "bar",
              "size": "20"
            },
            "metadata_fingerprint": "ZcZLfPOo83M=",
            "metadata_startup_script": "echo hi \u003e /test.txt",
            "name": "list-name1-name2-name3",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/valkoiset/global/networks/default",
                "network_ip": "10.132.0.22",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/valkoiset/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "valkoiset"
              }
            ],
            "project": "valkoiset",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/valkoiset/zones/europe-west1-b/instances/list-name1-name2-name3",
            "service_account": [
              {
                "email": "541439712059-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "tags": [
              "allow-http",
              "allow-https"
            ],
            "tags_fingerprint": "0lKznsNvMu8=",
            "zone": "europe-west1-b"
          }
        }
      ]
    }
  ]
}